--- a/environment.yml
+++ b/environment.yml
@@ -1,24 +1,260 @@
 name: mercure-monaisegment
 channels:
   - conda-forge
+  - defaults
 dependencies:
-  - python=3.7
-  - libpng
-  - libjpeg-turbo
-  - pytorch
-  - torchvision
-  - jupyterlab
-  - cudatoolkit=11.1
-  - matplotlib
-  - pip
-  - pip :
-    - monai
-    - torch>=1.10.2
-    - numpy>=1.21
-    - nibabel>=3.2.1
-    - pydicom>=1.4.2
-    - highdicom>=0.18.2
-    - SimpleITK>=2.0.0
-    - typeguard~=2.12.1 # Work around MONAI requirements.txt bug that picks up the wrong typeguard version
-    - scikit-learn 
-    - monai-deploy-app-sdk
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_kmp_llvm
+  - aiofiles=22.1.0=pyhd8ed1ab_0
+  - aiosqlite=0.19.0=pyhd8ed1ab_0
+  - alsa-lib=1.2.8=h166bdaf_0
+  - anyio=3.6.2=pyhd8ed1ab_0
+  - argon2-cffi=21.3.0=pyhd8ed1ab_0
+  - argon2-cffi-bindings=21.2.0=py37h540881e_2
+  - attr=2.5.1=h166bdaf_1
+  - attrs=23.1.0=pyh71513ae_1
+  - babel=2.12.1=pyhd8ed1ab_1
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=pyhd8ed1ab_3
+  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
+  - beautifulsoup4=4.12.2=pyha770c72_0
+  - bleach=6.0.0=pyhd8ed1ab_0
+  - brotli=1.0.9=h166bdaf_8
+  - brotli-bin=1.0.9=h166bdaf_8
+  - brotlipy=0.7.0=py37h540881e_1004
+  - bzip2=1.0.8=h7f98852_4
+  - ca-certificates=2023.5.7=hbcca054_0
+  - certifi=2023.5.7=pyhd8ed1ab_0
+  - cffi=1.15.1=py37h43b0acd_1
+  - charset-normalizer=3.1.0=pyhd8ed1ab_0
+  - cryptography=38.0.2=py37h5994e8b_1
+  - cudatoolkit=11.1.1=ha002fc5_11
+  - cycler=0.11.0=pyhd8ed1ab_0
+  - dbus=1.13.6=h5008d03_3
+  - debugpy=1.6.3=py37hd23a5d3_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - defusedxml=0.7.1=pyhd8ed1ab_0
+  - entrypoints=0.4=pyhd8ed1ab_0
+  - expat=2.5.0=hcb278e6_1
+  - fftw=3.3.10=nompi_hc118613_107
+  - flit-core=3.9.0=pyhd8ed1ab_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=hab24e00_0
+  - fontconfig=2.14.2=h14ed4e7_0
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - fonttools=4.38.0=py37h540881e_0
+  - freetype=2.12.1=hca18f0e_1
+  - gettext=0.21.1=h27087fc_0
+  - glib=2.76.2=hfc55251_0
+  - glib-tools=2.76.2=hfc55251_0
+  - gst-plugins-base=1.21.3=h4243ec0_1
+  - gstreamer=1.21.3=h25f0c4b_1
+  - gstreamer-orc=0.4.33=h166bdaf_0
+  - icu=70.1=h27087fc_0
+  - idna=3.4=pyhd8ed1ab_0
+  - importlib-metadata=4.11.4=py37h89c1867_0
+  - importlib_metadata=4.11.4=hd8ed1ab_0
+  - importlib_resources=5.12.0=pyhd8ed1ab_0
+  - ipykernel=6.16.2=pyh210e3f2_0
+  - ipython=7.33.0=py37h89c1867_0
+  - ipython_genutils=0.2.0=py_1
+  - jack=1.9.22=h11f4161_0
+  - jedi=0.18.2=pyhd8ed1ab_0
+  - jinja2=3.1.2=pyhd8ed1ab_1
+  - jpeg=9e=h166bdaf_2
+  - json5=0.9.5=pyh9f0ad1d_0
+  - jsonschema=4.17.3=pyhd8ed1ab_0
+  - jupyter_client=7.4.9=pyhd8ed1ab_0
+  - jupyter_core=4.11.1=py37h89c1867_0
+  - jupyter_events=0.6.3=pyhd8ed1ab_0
+  - jupyter_server=1.23.4=pyhd8ed1ab_0
+  - jupyter_server_fileid=0.9.0=pyhd8ed1ab_0
+  - jupyter_server_ydoc=0.8.0=pyhd8ed1ab_0
+  - jupyter_ydoc=0.2.3=pyhd8ed1ab_0
+  - jupyterlab=3.6.3=pyhd8ed1ab_0
+  - jupyterlab_pygments=0.2.2=pyhd8ed1ab_0
+  - jupyterlab_server=2.22.1=pyhd8ed1ab_0
+  - keyutils=1.6.1=h166bdaf_0
+  - kiwisolver=1.4.4=py37h7cecad7_0
+  - krb5=1.20.1=h81ceb04_0
+  - lame=3.100=h166bdaf_1003
+  - lcms2=2.14=h6ed2654_0
+  - ld_impl_linux-64=2.40=h41732ed_0
+  - lerc=4.0.0=h27087fc_0
+  - libblas=3.9.0=16_linux64_openblas
+  - libbrotlicommon=1.0.9=h166bdaf_8
+  - libbrotlidec=1.0.9=h166bdaf_8
+  - libbrotlienc=1.0.9=h166bdaf_8
+  - libcap=2.67=he9d0100_0
+  - libcblas=3.9.0=16_linux64_openblas
+  - libclang=15.0.7=default_h7634d5b_2
+  - libclang13=15.0.7=default_h9986a30_2
+  - libcups=2.3.3=h36d4200_3
+  - libdb=6.2.32=h9c3ff4c_0
+  - libdeflate=1.14=h166bdaf_0
+  - libedit=3.1.20191231=he28a2e2_2
+  - libevent=2.1.10=h28343ad_4
+  - libexpat=2.5.0=hcb278e6_1
+  - libffi=3.4.2=h7f98852_5
+  - libflac=1.4.2=h27087fc_0
+  - libgcc-ng=12.2.0=h65d4601_19
+  - libgcrypt=1.10.1=h166bdaf_0
+  - libgfortran-ng=12.2.0=h69a702a_19
+  - libgfortran5=12.2.0=h337968e_19
+  - libglib=2.76.2=hebfc3b9_0
+  - libgpg-error=1.46=h620e276_0
+  - libhwloc=2.9.1=hd6dc26d_0
+  - libiconv=1.17=h166bdaf_0
+  - libjpeg-turbo=2.1.4=h166bdaf_0
+  - liblapack=3.9.0=16_linux64_openblas
+  - libllvm15=15.0.7=hadd5161_1
+  - libnsl=2.0.0=h7f98852_0
+  - libogg=1.3.4=h7f98852_1
+  - libopenblas=0.3.21=pthreads_h78a6416_3
+  - libopus=1.3.1=h7f98852_1
+  - libpng=1.6.39=h753d276_0
+  - libpq=15.3=hbcd7760_0
+  - libprotobuf=3.21.12=h3eb15da_0
+  - libsndfile=1.2.0=hb75c966_0
+  - libsodium=1.0.18=h36c2ea0_1
+  - libsqlite=3.42.0=h2797004_0
+  - libstdcxx-ng=12.2.0=h46fd767_19
+  - libsystemd0=253=h8c4010b_1
+  - libtiff=4.4.0=h82bc61c_5
+  - libtool=2.4.7=h27087fc_0
+  - libudev1=253=h0b41bf4_1
+  - libuuid=2.38.1=h0b41bf4_0
+  - libvorbis=1.3.7=h9c3ff4c_0
+  - libwebp-base=1.3.0=h0b41bf4_0
+  - libxcb=1.13=h7f98852_1004
+  - libxkbcommon=1.5.0=h79f4944_1
+  - libxml2=2.10.3=hca2bb57_4
+  - libzlib=1.2.13=h166bdaf_4
+  - llvm-openmp=16.0.4=h4dfa4b3_0
+  - lz4-c=1.9.4=hcb278e6_0
+  - markupsafe=2.1.1=py37h540881e_1
+  - matplotlib=3.5.3=py37h89c1867_2
+  - matplotlib-base=3.5.3=py37hf395dca_2
+  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
+  - mistune=2.0.5=pyhd8ed1ab_0
+  - mkl=2022.2.1=h84fe81f_16997
+  - mpg123=1.31.3=hcb278e6_0
+  - munkres=1.1.4=pyh9f0ad1d_0
+  - mysql-common=8.0.32=hf1915f5_2
+  - mysql-libs=8.0.32=hca2cd23_2
+  - nbclassic=1.0.0=pyh8b2e9e2_0
+  - nbclient=0.7.0=pyhd8ed1ab_0
+  - nbconvert-core=7.4.0=pyhd8ed1ab_0
+  - nbformat=5.8.0=pyhd8ed1ab_0
+  - ncurses=6.3=h27087fc_1
+  - nest-asyncio=1.5.6=pyhd8ed1ab_0
+  - ninja=1.11.1=h924138e_0
+  - notebook=6.5.4=pyha770c72_0
+  - notebook-shim=0.2.3=pyhd8ed1ab_0
+  - nspr=4.35=h27087fc_0
+  - nss=3.89=he45b914_0
+  - numpy=1.21.6=py37h976b520_0
+  - openjpeg=2.5.0=h7d73246_1
+  - openssl=3.1.0=hd590300_3
+  - packaging=23.1=pyhd8ed1ab_0
+  - pandocfilters=1.5.0=pyhd8ed1ab_0
+  - parso=0.8.3=pyhd8ed1ab_0
+  - pcre2=10.40=hc3806b6_0
+  - pexpect=4.8.0=pyh1a96a4e_2
+  - pickleshare=0.7.5=py_1003
+  - pillow=9.2.0=py37h850a105_2
+  - pip=23.1.2=pyhd8ed1ab_0
+  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_0
+  - ply=3.11=py_1
+  - prometheus_client=0.16.0=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.38=pyha770c72_0
+  - psutil=5.9.3=py37h540881e_0
+  - pthread-stubs=0.4=h36c2ea0_1001
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pulseaudio=16.1=hcb278e6_3
+  - pulseaudio-client=16.1=h5195f5e_3
+  - pulseaudio-daemon=16.1=ha8d29e2_3
+  - pycparser=2.21=pyhd8ed1ab_0
+  - pygments=2.15.1=pyhd8ed1ab_0
+  - pyopenssl=23.1.1=pyhd8ed1ab_0
+  - pyparsing=3.0.9=pyhd8ed1ab_0
+  - pyqt=5.15.7=py37hf30b843_1
+  - pyqt5-sip=12.11.0=py37hd23a5d3_1
+  - pyrsistent=0.18.1=py37h540881e_1
+  - pysocks=1.7.1=py37h89c1867_5
+  - python=3.7.12=hf930737_100_cpython
+  - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python-fastjsonschema=2.16.3=pyhd8ed1ab_0
+  - python-json-logger=2.0.7=pyhd8ed1ab_0
+  - python_abi=3.7=3_cp37m
+  - pytz=2023.3=pyhd8ed1ab_0
+  - pyyaml=6.0=py37h540881e_4
+  - pyzmq=24.0.1=py37h0c0c2a8_0
+  - qt-main=5.15.6=hf6cd601_5
+  - readline=8.2=h8228510_1
+  - requests=2.29.0=pyhd8ed1ab_0
+  - rfc3339-validator=0.1.4=pyhd8ed1ab_0
+  - rfc3986-validator=0.1.1=pyh9f0ad1d_0
+  - send2trash=1.8.2=pyh41d4057_0
+  - setuptools=67.7.2=pyhd8ed1ab_0
+  - sip=6.7.2=py37hd23a5d3_0
+  - six=1.16.0=pyh6c4a22f_0
+  - sleef=3.5.1=h9b69904_2
+  - sniffio=1.3.0=pyhd8ed1ab_0
+  - soupsieve=2.3.2.post1=pyhd8ed1ab_0
+  - sqlite=3.42.0=h2c6b66d_0
+  - tbb=2021.9.0=hf52228f_0
+  - terminado=0.17.1=pyh41d4057_0
+  - tinycss2=1.2.1=pyhd8ed1ab_0
+  - tk=8.6.12=h27826a3_0
+  - toml=0.10.2=pyhd8ed1ab_0
+  - tomli=2.0.1=pyhd8ed1ab_0
+  - tornado=6.2=py37h540881e_0
+  - traitlets=5.9.0=pyhd8ed1ab_0
+  - typing-extensions=4.5.0=hd8ed1ab_0
+  - typing_extensions=4.5.0=pyha770c72_0
+  - unicodedata2=14.0.0=py37h540881e_1
+  - urllib3=1.26.15=pyhd8ed1ab_0
+  - wcwidth=0.2.6=pyhd8ed1ab_0
+  - webencodings=0.5.1=py_1
+  - websocket-client=1.5.1=pyhd8ed1ab_0
+  - wheel=0.40.0=pyhd8ed1ab_0
+  - xcb-util=0.4.0=h166bdaf_0
+  - xcb-util-image=0.4.0=h166bdaf_0
+  - xcb-util-keysyms=0.4.0=h166bdaf_0
+  - xcb-util-renderutil=0.3.9=h166bdaf_0
+  - xcb-util-wm=0.4.1=h166bdaf_0
+  - xkeyboard-config=2.38=h0b41bf4_0
+  - xorg-libxau=1.0.9=h7f98852_0
+  - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xz=5.2.6=h166bdaf_0
+  - y-py=0.5.4=py37hbd0741f_0
+  - yaml=0.2.5=h7f98852_2
+  - ypy-websocket=0.8.2=pyhd8ed1ab_0
+  - zeromq=4.3.4=h9c3ff4c_1
+  - zipp=3.15.0=pyhd8ed1ab_0
+  - zstd=1.5.2=h3eb15da_6
+  - pip:
+    - colorama==0.4.6
+    - highdicom==0.21.1
+    - joblib==1.2.0
+    - monai==1.1.0
+    - monai-deploy-app-sdk==0.5.0
+    - networkx==2.6.3
+    - nibabel==4.0.2
+    - nvidia-cublas-cu11==11.10.3.66
+    - nvidia-cuda-nvrtc-cu11==11.7.99
+    - nvidia-cuda-runtime-cu11==11.7.99
+    - nvidia-cudnn-cu11==8.5.0.96
+    - pillow-jpls==1.2.0
+    - pydicom==2.3.1
+    - scikit-learn==1.0.2
+    - scipy==1.7.3
+    - simpleitk==2.2.1
+    - threadpoolctl==3.1.0
+    - torch==1.11.0
+    - torchvision==0.12.0
+    - typeguard==2.12.1
